test/Fail/Issue3692.err
Issue3692.agda:33.19-23: error: [UnequalTerms]
The terms
  m≤n
and
  m≤n'
are not equal at type m ≤ n
when checking that the expression refl has type
inject≤ m n i m≤n ≡ inject≤ m n i m≤n'
